docs/bnf.txt
program: global_declaration
    | global_declaration program
    ;

global_declaration: function_declaration
    | var_declaration
    ;

function_declaration: type identifier '(' opt_parameter ')' compound_statement
    ;

opt_parameter: <empty>
    | type identifier
    ;

var_declaration: type identifier_list ';'
    ;

identifier_list: identifier
    | identifier ',' identifier_list
    ;

type: type_keyword opt_pointer
    ;

type_keyword: 'char'
    | 'int'
    | 'long'
    | 'void'
    ;

opt_pointer: <empty>
    | '*' opt_pointer
    ;

compound_statement:
      '{' '}'
    | '{' statement '}'
    | '{' statement statements '}'
    ;

statement: print_statement
    | declaration
    | expression_statement
    | if_statement
    | while_statement
    | for_statement
    | return_statement
    ;

print_statement: 'print' expression ';'
    ;

declaration: type identifier_list ';'
    ;

function_call: identifier '(' opt_expression ')'
    ;

opt_expression: <empty>
    | expression
    ;

return_statement: 'return' '(' expression ')'
    ;

expression_statement: expression ';'
    ;

if_statement: if_head
    | if_head 'else' compound_statement
    ;

if_head: 'if' '(' true_false_expression ')' compound_statement
    ;

while_statement: 'while' '(' true_false_expression ')' compound_statement
    ;

for_statement: 'for' '(' statement ';'
                       true_false_expression ';'
                       statement ')' compound_statement
    ;

identifier: T_IDENT
    ;

/*
 * The operators, from the loosest to the tightest. '=' binds less tightly
 * than every other one and to the right, so that a= b= 3 stores into b
 * first and then into a. Only a variable and the location a pointer holds
 * can stand on its left.
 */
expression: assignment_expression
    ;

assignment_expression: logical_or_expression
    | lvalue '=' assignment_expression
    ;

lvalue: identifier
    | '*' prefix_expression
    ;

logical_or_expression:
      logical_and_expression
    | logical_or_expression '||' logical_and_expression
    ;

logical_and_expression:
      or_expression
    | logical_and_expression '&&' or_expression
    ;

or_expression:
      xor_expression
    | or_expression '|' xor_expression
    ;

xor_expression:
      amper_expression
    | xor_expression '^' amper_expression
    ;

amper_expression:
      equality_expression
    | amper_expression '&' equality_expression
    ;

/*
 * A condition is any expression. A comparison already says whether it
 * holds; any other value holds when it is not zero.
 */
true_false_expression: expression
    ;

equality_expression:
      relational_expression
    | equality_expression '==' relational_expression
    | equality_expression '!=' relational_expression
    ;

relational_expression:
      shift_expression
    | relational_expression '<' shift_expression
    | relational_expression '>' shift_expression
    | relational_expression '<=' shift_expression
    | relational_expression '>=' shift_expression
    ;

shift_expression:
      additive_expression
    | shift_expression '<<' additive_expression
    | shift_expression '>>' additive_expression
    ;

additive_expression:
      multiplicative_expression
    | additive_expression '+' multiplicative_expression
    | additive_expression '-' multiplicative_expression
    ;

multiplicative_expression:
      prefix_expression
    | multiplicative_expression '*' prefix_expression
    | multiplicative_expression '/' prefix_expression
    ;

/*
 * The prefix operators apply to whatever they are written before, and '++'
 * and '--' also apply to a name they are written after. An increment or a
 * decrement has to have somewhere to put the new value, so it only takes
 * the name of a variable.
 */
prefix_expression: postfix_expression
    | '*' prefix_expression
    | '&' prefix_expression
    | '-' prefix_expression
    | '~' prefix_expression
    | '!' prefix_expression
    | '++' prefix_expression
    | '--' prefix_expression
    ;

postfix_expression: primary
    | identifier '++'
    | identifier '--'
    ;

primary: number
    | identifier
    | function_call
    ;

number: T_INTLIT
    ;
